[gd_scene load_steps=2 format=3 uid="uid://e8j0l6m4n7p9q"]

[ext_resource type="Script" path="res://scenes/story/Launch.gd" id="1_launch"]

[node name="Launch" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_launch")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 1)

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
layout_mode = 2

[node name="ShipDisplay" type="ColorRect" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
custom_minimum_size = Vector2(200, 200)
color = Color(0.7, 0.7, 0.7, 1)

[node name="ShipLabel" type="Label" parent="CenterContainer/VBoxContainer/ShipDisplay"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -40.0
offset_top = -10.0
offset_right = 40.0
offset_bottom = 10.0
text = "YOUR SHIP"
horizontal_alignment = 1

[node name="LaunchText" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Launching to space..."
horizontal_alignment = 1
theme_override_font_sizes/font_size = 20

[node name="PlayerNameText" type="Label" parent="CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Good luck, Pilot [NAME]!"
horizontal_alignment = 1
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0, 1, 0, 1)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
